--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,33 @@
 <!DOCTYPE html>
 <html lanh="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initil-scale=1.0">
-    <title>My Homepage</title>
-    <link rel="stylesheet" href="a.css">
-    
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initil-scale=1.0">
+      <title>My Homepage</title>
+      <link rel="stylesheet" href="a.css">
+    </head>
+    <body>
+        <header>
+            <div class="container">
+                <h1>Curry&Co.</h1>
+                <nav>
+                    <a href="#">Home</a>
+                    <a href="#">Services</a>
+                    <a href="#">About</a>
+                    <a href="#">Contact</a>
+                </nav>
+            </div>
+        </header>
+
+        <main class="container">
+            <section class="Home">
+                <h2>Welcome to a taste of home</h2>
+                <p> Your table is waiting iscover our unique menu!</p>
+                <button>Get Started</button>
+            </section>
+        </main>
+        <footer>
+            <p>&copy; 2025 Curry&Co.</p>
+        </footer>
+    </body>
+</html>    
